# neural-network-scratch

./: CMakeLists.txt  main.cpp
data/: normalised_dataset.csv  pima-indians-diabetes.data.csv
include/: dataloader.h  neuralnetwork.h  node.h
src/: main.cpp
